# HESea_Tree

./: CMakeLists.txt
data/: data_in_tree_label.csv
src/: DesionTree.cpp  Hom_Tree.cpp  Hom_Tree.h  lightgbm.cpp
